fix(lynx-ui): align dark mode theming with inhouse implementation
Follow the inhouse pattern: use subsite-theme mixin in the main
theme/index.scss with [data-subsite='lynx-ui'] selectors, and only
set --background/--foreground on .lynx-ui-home-warp (the home page
wrapper). Revert home-layout-var.scss to unscoped :root since it's
only loaded by the HomeLayout component.

Previously tried scoping all vars to [data-subsite='lynx-ui'] and
loading them globally, which was fragile and inconsistent with how
other subsites (react, rspeedy) handle theming.

--- a/theme/index.scss
+++ b/theme/index.scss
@@ -2,7 +2,6 @@
 @use './external-links';
 @use './blog-btn.scss';
 @use './home-layout-var';
-@use './lynx-ui/home-layout-var' as lynx-ui-vars;
 @use './hero-text';
 @use './semi';
 
@@ -96,6 +95,29 @@ $link-color-dark: rgba(84, 169, 255, 1);
 
 :root[data-subsite='rspeedy'] {
   @include subsite-theme(#ff8b00);
+}
+
+:root[data-subsite='lynx-ui'] {
+  @include subsite-theme(#caa6ee);
+
+  .lynx-ui-home-warp {
+    --background: 0 0% 100%;
+    --foreground: 222.2 47.4% 11.2%;
+    background-color: hsl(var(--background));
+    color: hsl(var(--foreground));
+    font-feature-settings:
+      'rlig' 1,
+      'calt' 1;
+  }
+}
+
+.dark[data-subsite='lynx-ui'] {
+  @include subsite-theme(#e8d7ff);
+
+  .lynx-ui-home-warp {
+    --background: 224 71% 4%;
+    --foreground: 213 31% 91%;
+  }
 }
 
 :root[data-subsite='react'] {
